# cronapp1.3

./: .replit  authentication_improvements.md  create-tables.js  create_test_user.py  extract.js  fileinfo.txt  index.html  inspect-tables.js  login.html  login_response.json  package-lock.json  package.json  pyproject.toml  simple_server.py  start-flask-api.sh  tailwind.config.ts  test-mysql.js  test_auth.sh  test_forgot_password.sh  test_forgot_password.sh.output  test_login.sh  test_login_new.sh  test_register.sh  test_reset_password.sh  text.txt  token.txt
temp/: .replit  package-lock.json  package.json  pyproject.toml  start-flask-api.sh  text.txt
temp/api/: config.py  db.py  dev_server.py  start_mock.py  test_db.py  test_query.py
temp/attached_assets/: ClinicalEducation.tsx  ConditionManagement.tsx  Footer.tsx  Header.tsx  Pasted-Objetivo-Cr-tico-Eliminar-toda-exposici-n-de-datos-sensibles-en-el-cliente-localStorage-cookies--1747199286314.txt  Pasted-Objetivo-Enfocado-Reparar-nicamente-los-m-dulos-de-login-registro-y-recuperaci-n-de-contrase-a-h-1747198416314.txt  Pasted-Objetivo-Implementar-un-sistema-de-autenticaci-n-que-Mantenga-la-sesi-n-activa-incluso-si-el-u-1747200811963.txt  Pasted-Objetivo-Principal-Reparar-y-asegurar-al-100-los-sistemas-de-login-registro-recuperaci-n-de-con-1747197372018.txt  Pasted-x-Build-failed-in-4-37s-error-during-build-vite-esbuild-Transform-failed-with-2-errors-home--1746638954573.txt  PatientProfile.tsx  RiskMonitoring.tsx  Sidebar.tsx  api2.rar  endpoint.rest
temp/db/: seed.ts
temp/server/: index.ts
temp/shared/: schema.ts
(+118 files in other folders)
